* Fix - Fixing the media query to make sure the search form displays on tablets

--- a/assets/css/scss/to-search.scss
+++ b/assets/css/scss/to-search.scss
@@ -603,7 +603,7 @@
 		.facetwp-form {
 			margin-bottom: 25px;
 		}
-		@media (max-width: 768px) {
+		@include media('<phone') {
 			display: none;
 		}
 	}
